Fix anchor jump position

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,7 +14,7 @@
   }
 
   .anchor {
-    @apply scroll-ml-4 scroll-mt-[10.5rem];
+    @apply scroll-ml-4 scroll-mt-48;
   }
 
   .anchor:target {
